# fsoft2026_1DD_1

./: .gitignore  CMakeLists.txt  README.md  teste.cpp
Documentation/Iteration01/: Glossary.md
Documentation/Iteration01/Relatorio/: Relatorio.txt
Documentation/Use Cases/: UC1.puml  UC2.puml  UC3.puml  UC4.puml  UC5.puml
Documentation/Use Cases/UC1/puml/: UC1-SD.puml  UC1-SSD.puml
Documentation/Use Cases/UC10/puml/: UC10-SD.puml  UC10-SSD.puml
Documentation/Use Cases/UC11/puml/: UC11-SD.puml  UC11-SSD.puml
Documentation/Use Cases/UC2/puml/: UC2-SD.puml
Documentation/Use Cases/UC3/puml/: UC3-SD.puml  UC3-SSD.puml
Documentation/Use Cases/UC4/puml/: UC4-SD.puml  UC4-SDD.puml
Documentation/Use Cases/UC5/puml/: UC5-SD.puml  UC5-SSD.puml
Documentation/Use Cases/UC6/puml/: UC6-SD.puml  (+1 more)
Documentation/Use Cases/User Interface/: User Interface
Documentation/Use Cases/puml/: UC1.puml  UC2.puml  UC3.puml  UC4.puml  UC5.puml
Documentation/global-artifacts/: Glossary.md
Documentation/global-artifacts/puml/: CD.puml  DM.puml  UCD.puml  UCD_Center_Administrator.puml  UCD_Nurse.puml  UCD_Receptionist.puml  UCD_SNS_User.puml
src/: main.cpp
src/controller/: EmployeeController.cpp  EmployeeController.h  VaccineController.cpp  VaccineController.h
src/model/: CenterAdministrator.cpp  CenterAdministrator.h  Employee.cpp  Employee.h  HealthcareCenter.cpp  HealthcareCenter.h  Nurse.cpp  Nurse.h  Receptionist.cpp  Receptionist.h  SNSUser.cpp  SNSUser.h  Vaccine.cpp  Vaccine.h  VaccineType.cpp  VaccineType.h
src/view/: MainMenu.cpp  MainMenu.h  Utils.cpp  Utils.h
(+6 files in other folders)
